// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup can select a different item 1`] = `
<div>
  <div
    aria-label="test"
    class="css-16wknvt-Container ec3iq7v3"
    role="radiogroup"
  >
    <label
      aria-checked="false"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice One"
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice One
      </div>
    </label>
    <label
      aria-checked="false"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice Two"
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice Two
      </div>
    </label>
    <label
      aria-checked="true"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice Three"
        checked=""
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice Three
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup renders 1`] = `
<div>
  <div
    aria-label="test"
    class="css-16wknvt-Container ec3iq7v3"
    role="radiogroup"
  >
    <label
      aria-checked="true"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice One"
        checked=""
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice One
      </div>
    </label>
    <label
      aria-checked="false"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice Two"
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice Two
      </div>
    </label>
    <label
      aria-checked="false"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice Three"
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice Three
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup renders disabled 1`] = `
<div>
  <div
    aria-label="test"
    class="css-16wknvt-Container ec3iq7v3"
    role="radiogroup"
  >
    <label
      aria-checked="true"
      class="css-85fbh-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice One"
        checked=""
        class="css-tqe8hd-Radio-checkedCss epd3w7v0"
        disabled=""
        type="radio"
      />
      <div
        class="css-m8i2g4-RadioLineText ec3iq7v1"
      >
        Choice One
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup renders disabled choice 1`] = `
<div>
  <div
    aria-label="test"
    class="css-16wknvt-Container ec3iq7v3"
    role="radiogroup"
  >
    <label
      aria-checked="true"
      class="css-1aip5k1-RadioLineItem ec3iq7v2"
    >
      <input
        aria-label="Choice One"
        checked=""
        class="css-12n34x7-Radio-checkedCss epd3w7v0"
        type="radio"
      />
      <div
        class="css-1nwjsmg-RadioLineText ec3iq7v1"
      >
        Choice One
      </div>
    </label>
    <span
      aria-describedby="tooltip-qsqdc16gm0"
      class="css-1y4rfpo-Container e1lk5gpt0"
    >
      <label
        aria-checked="false"
        class="css-85fbh-RadioLineItem ec3iq7v2"
      >
        <input
          aria-label="Choice Two"
          class="css-tqe8hd-Radio-checkedCss epd3w7v0"
          disabled=""
          type="radio"
        />
        <div
          class="css-m8i2g4-RadioLineText ec3iq7v1"
        >
          Choice Two
        </div>
      </label>
    </span>
  </div>
</div>
`;
